[package]
name = "etcd-cfn-signal"
version = "0.1.0"
authors = ["Graeme Coupar <graeme@rolepoint.com>"]

[dependencies]
hyper = "0.9.14"
openssl = "0.7"
serde = "0.8.4"
serde_json = "0.8.4"
clap = "2.19.2"
rusoto = { git = "https://github.com/obmarg/rusoto.git", features = ["cloudformation", "ec2"] }
common = { path = "../common" }